2.000_9 (yyyy-mm-dd)

    API / Behaviour Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - More idomatic and robust tests for AnyEvent::Handle support

    Bug Fixes:
        - None.

    Dependencies:
        - None.

    Packaging:
        - Set ExtUtils::MakeMaker RECURSIVE_TEST_FILES
        - Add a test script to compare Bifcode vs Bifcode::V1
          performance

2.000_8 (2019-11-13)

    Dependencies:
        - Hopefully support Perl 5.12 by not using "package BLOCK" in
          error class.

2.000_7 (2019-11-13)

    API / Behaviour Changes:
        - Extra argument to encode_bifcode() for BIFCODE_BIFCODE
          generation. Bifcode::BIFCODE objects are no longer used.

    Dependencies:
        - Convert Bifcode::V1 tests to Test2::V0.

2.000_6 (2019-11-12)

    Packaging:
        - Depend on Text::Diff explicitly for tests (closes RT#130969)
        - Add an 'anyevent-handle' feature that depends on
          AnyEvent::Handle.

2.000_5 (2019-11-11)

    API / Behaviour Changes:
        - Rename everything Bifcode2 back to Bifcode

    Enhancements:
        - Make diff-bifcode an optional "feature"

    Packaging:
        - Convert all tests to Test2::V0.

2.000_4 (2019-11-09)

    API / Behaviour Changes:
        - Rename Bifcode::V2 -> Bifcode2
        - Rename *_bifcode() functions to *_bifcode2()

    Enhancements:
        - Better test function names.
        - Better test for decoding of BIFCODE_REAL.
        - Proper AnyEvent support with tests

2.000_3 (2019-09-09)

    API / Behaviour Changes:
        - Re-introduce requirement for BIFCODE_DICT keys to be
          BIFCODE_UTF8 or BIFCODE_BYTES.

    New Features:
        - New BIFCODE_BIFCODE type for framing Bifcodes across a
          network connection.
        - Support AnyEvent::Handle integration.

    Enhancements:
        - Only load Carp when we actually need to croak

    Packaging:
        - Add some missing (bugtracker, repo) META data.
