@@ -6,7 +6,7 @@ use lib "$RealBin/lib";
 use Test::Bifcode;
 use Test2::V0;
 use Test2::Require::Module 'Text::Diff';
-use Bifcode 'encode_bifcode', 'diff_bifcode';
+use Bifcode::V2 'encode_bifcode', 'diff_bifcode';
 
 eval { diff_bifcode() };
 isa_ok $@, ['Bifcode::Error::DiffUsage'], 'diff_bifcode not enough arguments';
