@@ -6,7 +6,7 @@ use FindBin qw($RealBin);
 use lib "$RealBin/../lib";
 
 use Benchmark 'cmpthese';
-use Bifcode     ();
+use Bifcode::V2 ();
 use Bifcode::V1 ();
 
 #DB::enable_profile();
@@ -25,7 +25,7 @@ cmpthese(
     10000,
     {
         'Bifcode::V1' => sub { Bifcode::V1::encode_bifcode $h1 },
-        Bifcode       => sub { Bifcode::encode_bifcode $h1},
+        Bifcode       => sub { Bifcode::V2::encode_bifcode $h1},
     }
 );
 
@@ -43,7 +43,7 @@ my $b1 = ''
   };
 
 my $b2 = ''
-  . Bifcode::encode_bifcode {
+  . Bifcode::V2::encode_bifcode {
     bools   => [ boolean::false, boolean::true, ],
     bytes   => \pack( 's<', 255 ),
     integer => 25,
@@ -56,7 +56,7 @@ cmpthese(
     10000,
     {
         'Bifcode::V1' => sub { Bifcode::V1::decode_bifcode $b1 },
-        Bifcode       => sub { Bifcode::decode_bifcode $b2},
+        Bifcode       => sub { Bifcode::V2::decode_bifcode $b2},
     }
 );
 
