@@ -1,7 +1,8 @@
 2.000_9 (yyyy-mm-dd)
 
     API / Behaviour Changes:
-        - None.
+        - Rename Bifcode -> Bifcode::V2 so that it is explicitly
+          obvious which version is in use.
 
     New Features:
         - None.
